# djbootcamp

./: .dockerignore  .env.ejemplo  .gitignore  README.md  descripcion.md  doc.md  dockerfile  objetivos.md  pyproject.toml  requirements.txt  swarm.yml
.github/workflows/: deploy.yml
bootcamp/: bootcamp.sqlite3  requirements.txt  utils.py
bootcamp/bootcamp/: requirements.txt  settings.py  urls.py
bootcamp/comisiones/: admin.py  apps.py  errors.py  models.py  serializer.py  services.py  test_service.py  tests_inscripciones.py  urls.py  views.py  x_tests_comisiones.py
bootcamp/comisiones/migrations/: 0001_initial.py  0002_comisionalumnos.py  0003_alter_comision_docente_alter_comision_materia.py
bootcamp/especialidad/: admin.py  manager.py  models.py  permissions.py  serializer.py  urls.py  views.py  x_tests.py
bootcamp/especialidad/migrations/: 0001_initial.py  0002_especialidad_nombre.py
bootcamp/examenes/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
bootcamp/examenes/migrations/: 0001_initial.py  0002_remove_examen_docente_remove_examen_nombre_and_more.py  0003_alter_resultadoexamen_nota.py  0004_alter_examen_comision_delete_resultadoexamen.py
bootcamp/materias/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py  x_tests.py
bootcamp/materias/migrations/: 0001_initial.py
bootcamp/personas/: admin.py  managers.py  middleware.py  models.py  permissions.py  serializer.py  urls.py  views.py  x_tests_alumnos.py  x_tests_coordinadores.py  x_tests_docentes.py
bootcamp/templates/: index.html
(+4 files in other folders)
